# WorkingHoursCalculator

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug-report-issue-template.md  enhancement-issue-template.md
.github/workflows/: CodeQL-CI.yml  GoogleTest-CI.yml  cmake-single-platform.yml  codeql.yml
src/: WorkingHoursCalculator.c  WorkingHoursCalculator.h
unittest/: test_WorkingHoursCalculator.cpp
